--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,27 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Robert</h2>
+        <h2 class="card-title">Karen</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 887550</li>
-            <li class="list-group-item">Email: <a href="mailto:robert@fakegmail.com">robert@fakegmail.com</a></li>
-            <li class="list-group-item">Office number: 98</li>
+            <li class="list-group-item">ID: 76544</li>
+            <li class="list-group-item">Email: <a href="mailto:kar3n.acosta@gmail.com">kar3n.acosta@gmail.com</a></li>
+            <li class="list-group-item">Office number: 3</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Robert</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 887669</li>
+            <li class="list-group-item">Email: <a href="mailto:robert@fakehotmail.com">robert@fakehotmail.com</a></li>
+            <li class="list-group-item">School: Texas A&M</li>
         </ul>
     </div>
 </div>
